# Nimbus

./: .coveragerc  .gitignore  .travis.yml  LICENSE  README.md  conftest.py  environment-linux.yml  environment-macOS.yml  pyproject.toml  readme.md  requirements-test.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: build.yml  ci.yml  test.yml
cell_classification/: application.py  application_test.py  augmentation_pipeline.py  augmentation_pipeline_test.py  evaluation_script.py  loss.py  loss_test.py  metrics.py  metrics_test.py  model_builder.py  model_builder_test.py  plot_utils.py  plot_utils_test.py  post_processing.py  post_processing_test.py  predict.py  predict_script.py  predict_test.py  prepare_data_script.py  prepare_data_script_MSK_colon.py  prepare_data_script_MSK_pancreas.py  prepare_data_script_decidua.py  prepare_data_script_tonic.py  prepare_data_script_tonic_annotated.py  promix_naive.py  promix_naive_test.py  segmentation_data_prep.py  segmentation_data_prep_test.py  simple_data_prep.py  simple_data_prep_test.py  train.py  train_test.py
cell_classification/configs/: decidua_split.json  msk_pancreas_split.json  params.toml
configs/: hickey_split.json  msk_colon_split.json  params.toml
scripts/: evaluation_script.py  hyperparameter_search.py
src/cell_classification/: application.py  augmentation_pipeline.py  evaluation_script.py  inference.py  loss.py  metrics.py  model_builder.py  plot_utils.py  prepare_data_script_MSK_colon.py  prepare_data_script_MSK_pancreas.py  prepare_data_script_decidua.py  prepare_data_script_tonic.py  prepare_data_script_tonic_annotated.py  promix_naive.py  segmentation_data_prep.py  semantic_head.py  simple_data_prep.py  unet.py  utils.py  viewer_widget.py
src/cell_classification/configs/: tonic_split.json
src/deepcell/: application.py  backbone_utils.py  deepcell_toolbox.py  fpn.py  layers.py  panopticnet.py  semantic_head.py  utils.py
templates/: 1_Nimbus_Predict.ipynb  2_Generic_Cell_Clustering.ipynb  generic_cell_clustering.ipynb  predict.ipynb
tests/: application_test.py  augmentation_pipeline_test.py  deepcell_application_test.py  deepcell_backbone_utils_test.py  deepcell_layers_test.py  deepcell_panopticnet_test.py  deepcell_toolbox_test.py  deepcell_utils_test.py  inference_test.py  loss_test.py  metrics_test.py  model_builder_test.py  plot_utils_test.py  post_processing_test.py  promix_naive_test.py  segmentation_data_prep_test.py  simple_data_prep_test.py  unet_test.py  viewer_widget_test.py
